# DiRect

./: CMakeLists.txt  README.md
src/: DIRect.c  DIRsubrout.c  direct-internal.h  direct.h  direct_wrap.c  tstc.c
